@@ -46,7 +46,7 @@ Directors, please:
 	<A HREF="mailto:foundation-announce@gnome.org">foundation-announce@gnome.org</A>
 	AND to <A HREF="mailto:foundation-list@gnome.org">foundation-list@gnome.org</A>
 	with a description of how you have contributed to GNOME and why you
-	want to be on the Board of Directors. (Deadline: Nov 8, 2001) 
+	want to be on the Board of Directors. (Deadline: Oct 23, 2000) 
 	</P>
 </OL>
 <P><BR><BR>
@@ -58,39 +58,27 @@ and non-technical tasks including:
 </P>
 <OL>
 	<LI><P>Help set overall direction for GNOME.</P>
-	<LI><P>Identify and resolve problems in GNOME.  Identify weak points
-               and opportunities for improvement and work toward improving GNOME in
-               these areas.</P>
-        <LI><P>Identify areas in which GNOME needs organizational improvement
-               and appoint committees or individuals to work on these areas. Work with 
-               and help these teams to ensure the projects move forward succesfully. 
-               Some common examples are the release team, GUADEC organizing committee, 
-               membership and elections committee, and the fundraising committee.</P>
-	<LI><P>Identify areas where GNOME needs improvements in policy, 
-               draft new policies, and go through revision and concensus-building of
-               the policies with the GNOME community and Board.  Some common examples
-               include the GNOME Foundation charter, the membership policy, the 
-               GNOME accounts policy, and the software license policy.</P>
-	<LI><P>Determine where and when GNOME conferences should be held and
-	       appoint individuals to coordinate the conferences.</P>
-	<LI><P>Make announcements and press releases on behalf of GNOME.</P>
-	<LI><P>Address any legal issues which come up (trademarks branding,
-	       licensing, copyright assignment, etc.).</P>
-	<LI><P>Develop the GNOME Foundation.</P>
-	<LI><P>Administer GNOME Foundation funds.</P>
-	<LI><P>Hire, oversee, and work with any GNOME Foundation staff.</P>
-	<LI><P>Maintain a web page and mailing lists. Post public parts of
-	       Board meeting minutes to foundation-list. Discuss them on the mailing 
-               list as necessary to guarantee all non-confidential Board activities are 
-               public and clear.</P>
-	<LI><P>Arbitrate technical disputes between maintainers.</P>
-	<LI><P>Act as a liaison with other open source projects.</P>
-	<LI><P>Work with GNOME Foundation Advisory Board. Act as a liason with 
-               advisory board members, updating them
-               to the state of GNOME, helping them to integrate into the GNOME
-               community, and helping to bring their suggestions before the Board.</P>
+	<LI><P>Work with GNOME Foundation Advisory Board.</P>
+	<LI><P>Finalize GNOME Foundation by-laws and finish creation of the
+	GNOME Foundation.</P>
 	<LI><P>Work with companies who would like to learn more about GNOME
-	       and define how they can help and work with GNOME.</P>
+	and define how they can help and work with GNOME.</P>
+	<LI><P>Create GNOME release schedule and appoint release
+	coordinators.</P>
+	<LI><P>Promote and market GNOME.</P>
+	<LI><P>Make announcements and press releases on behalf of GNOME.</P>
+	<LI><P>Appoint individuals/committees to handle media, booths at
+	conferences, press releases, etc.</P>
+	<LI><P>Determine where and when GNOME conferences should be held and
+	appoint individuals to coordinate the conferences.</P>
+	<LI><P>Administer GNOME Foundation funds.</P>
+	<LI><P>Address any legal issues which come up (trademarks branding,
+	licensing, copyright assignment, etc.).</P>
+	<LI><P>Maintain a web page and mailing lists. Post public parts of
+	Board meeting minutes.</P>
+	<LI><P>The board will arbitrate technical disputes between
+	maintainers.</P>
+	<LI><P>Be a liaison with other open source projects.</P>
 </OL>
 <P><U><B>Diversity of the Board of Directors</B></U></P>
 <P>The Board of Directors should reflect the diversity of the GNOME
@@ -98,9 +86,6 @@ project, including leaders of the core GNOME technologies, volunteer
 contributors as well as representatives of companies which are making
 major contributions to GNOME, individuals from various geographic
 regions, and representatives of other aspects of GNOME. 
-The Board is tasked with addressing a diverse set of problems and challenges
-and will function best if the Board members are equally diverse in their skill
-set and expertise.
 </P>
 <P><BR><BR>
 </P>
@@ -110,10 +95,11 @@ set and expertise.
 </P>
 <OL>
 	<LI><P>Be a good leader.</P>
-	<LI><P>Be willing and able to dedicate a significant amount of time to
-	GNOME Foundation work.</P>
+	<LI><P>Willing and able to dedicate a significant amount of time to
+	GF work.</P>
 	<LI><P>Be an active GNOME contributor who tracks the day-to-day
-	happenings of GNOME.</P>
+	happenings of GNOME. 
+	</P>
 </OL>
 <P><BR><BR>
 </P>
