@@ -1,3 +1,11 @@
+2001-10-23  Dan Mueth  <d-mueth@uchicago.edu>
+
+	Moving old overview document out of the way and putting
+	in an updated draft for the 2001 elections.
+
+	* overview.html:
+	* overview_2000.html:
+
 2001-10-18  Glynn Foster <glynn.foster@sun.com>
 
 	* membership-form.html: s/Name/Full Name in 
